@@ -1,3 +1,9 @@
+2004-10-11  Jakub Jelinek  <jakub@redhat.com>
+
+	* elf.c (bfd_section_from_shdr): Handle SHT_GNU_LIBLIST.
+	(special_sections): Add .gnu.liblist and .gnu.conflict.
+	(assign_section_numbers): Handle SHT_GNU_LIBLIST.
+
 2004-10-11  Alan Modra  <amodra@bigpond.net.au>
 
 	PR 233
